2007-07-05  Bill Clementson  <billclem@gmail.com>

	* elisp/erl-service.el (erl-nodename-history, erl-choose-nodename): 
	Added node name default value and history. 
	
	* elisp/erl-service.el (erl-find-mod): Deleted function erl-find-mod
	as its functionality has been subsumed by erl-find-source-under-point.
	
2007-07-05  Mats Cronqvist  <mats dot cronqvist at gmail dot youguess>

	* src/distel.erl: rewrote src_from_beam/1 just because the old one
	was ugly.

2007-07-04  Bill Clementson  <billclem@gmail.com>

	* elisp/erl-service.el (erl-find-source): Stop prompting for node name 
	when erl-find-source is called with a prefix arg (earlier change in 
	erl-target-node also affected erl-find-source).
	
2007-07-02  Bill Clementson  <billclem@gmail.com> & Matthias Radestock

	* elisp/erl-service.el (erl-ping): New function erl-ping checks to see
	whether it is possible to communicate with a node.
	
	* elisp/erl-service.el (maybe-select-db-rebuild, erl-fdoc-apropos, 
	erl-fdoc-describe): New function maybe-select-db-rebuild handles prefix
	arg prompting for fdoc commands that might require a rebuild of the 
	fdoc db.
	
	* elisp/erl-service.el (erl-target-node): Force node selection if no 
	such node has been choosen yet, or when invoked with a prefix argument.

	* elisp/distel.el (distel-keys): Added "C-c C-d g" key binding for 
	ner erl-ping command.

	* doc/distel.texi  (Conventions): Added comments about mods made to 
	allow selection of a node if a command is called with a prefix argument 
	and new erl-ping command.
	
2007-06-22  Bill Clementson  <billclem@gmail.com>

	* elisp/erl-service.el (erl-reload-module): Change "eq" to "equal" 
	when comparing node to edb-monitor-node.
	
2007-06-21  Bill Clementson  <billclem@gmail.com>

	* elisp/edb.el (edb-toggle-interpret, edb-monitor-cleanup): Reverted my 
	2007-06-11 change (as it was causing problems when doing multi-module
	debugging) and cleared edb-monitor-node in edb-monitor-cleanup so that 